--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -211,4 +211,5 @@
     <string name="end_shift">End</string>
     <string name="shift">Shift</string>
     <string name="call_for_support_success">Backup has been already called</string>
+    <string name="add_medical_info">Add medical info?</string>
 </resources>
