--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -139,10 +139,21 @@
         <item>Injection/Venom</item>
         <item>Inhalation</item>
     </string-array>
+    <string-array name="genderTypes">
+        <item>Male</item>
+        <item>Female</item>
+        <item>Other</item>
+    </string-array>
+    <string-array name="victimStatusTypes">
+        <item>Stable</item>
+        <item>Unstable</item>
+        <item>Deceased</item>
+    </string-array>
     <string name="log_in_to_see_tutorial">Log in to read tutorials</string>
     <string name="log_in_to_see_tutorial_message">Tutorials are available only for logged in users</string>
     <string name="about_us">About us</string>
     <string name="disease">Diseases</string>
+    <string name="error_adding_info">There was a problem with your request</string>
     <string name="bloodType">Blood type</string>
     <string name="register_hint">I agree to the terms and conditions of service</string>
     <string name="guest">Guest</string>
@@ -213,4 +224,7 @@
     <string name="call_for_support_success">Backup has been already called</string>
     <string name="add_medical_info">Add medical info?</string>
     <string name="incident">Incident</string>
+    <string name="gender">Gender</string>
+    <string name="status">Status</string>
+    <string name="casualtiesList">Victims list</string>
 </resources>
